# Skrobak

./: Cargo.toml  README.md
.github/: ci.yml
.github/workflows/: ci.yml
src/: lib.rs  skrobak.rs  skrobak_html.rs  utils.rs
