[package]
name = "skrobak"
version = "0.1.0"
edition = "2021"
authors = ["Daniele Luca <lucadaniele444@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12"}
tokio = {version = "1.21.2", features = ["full"]}
anyhow = {version = "1.0.66"}
scraper =  {version = "0.13.0"}

[dev-dependencies]
httpmock = {version = "0.6.6"}
